# repology-client

./: .bumpversion.cfg  .drone.yml  README.md  REUSE.toml  pyproject.toml  setup.cfg  tox.ini
.github/: FUNDING.yml
.reuse/: dep5
docs/: conf.py  contributing.rst  getting-started.rst  index.rst  installation.rst  release-notes.rst
docs/api/: repology_client.rst
repology_client/: __init__.py  constants.py  types.py  utils.py
repology_client/_client/: __init__.py  experimental.py  tools.py  v1.py
tests/: conftest.py  test_client.py  test_client_exp.py  test_client_tools.py  test_client_v1.py  test_types.py
tests/cassettes/test_client/: test_get_packages.yaml  test_get_projects_start_and_end.yaml
tests/cassettes/test_client_tools/: test_resolve_package.yaml
tests/cassettes/test_client_v1/: test_get_400_projects.yaml  test_get_n_maintainer_problems[300].yaml  test_get_n_maintainer_problems[400].yaml  test_get_n_maintainer_problems[500].yaml  test_get_n_problems[300].yaml  test_get_n_problems[400].yaml  test_get_n_problems[500].yaml  test_get_n_projects[300].yaml  test_get_n_projects[400].yaml  test_get_n_projects[500].yaml  test_get_packages.yaml  test_get_projects_search.yaml  test_get_projects_simple.yaml  test_get_projects_start_and_end.yaml  test_raw_api.yaml  test_resolve_package.yaml
